--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   },
   "homepage": "https://github.com/bmartinson/repo-hero#readme",
   "dependencies": {
+    "axios": "^1.7.7",
+    "axios-rate-limit": "^1.4.0",
     "exec": "^0.2.1",
     "fs": "^0.0.1-security",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7"
   }
 }
