--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "homepage": "https://github.com/bmartinson/repo-hero#readme",
   "dependencies": {
     "axios": "^1.7.7",
+    "axios-cache-interceptor": "^1.6.0",
     "axios-rate-limit": "^1.4.0",
     "exec": "^0.2.1",
     "fs": "^0.0.1-security",
     "node-fetch": "^3.3.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^10.0.0"
   }
 }
