--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "combine": "node results-combiner.js",
+    "chart": "node results-charter.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +32,7 @@
     "axios": "^1.7.7",
     "axios-cache-interceptor": "^1.6.0",
     "axios-rate-limit": "^1.4.0",
+    "csv-writer": "^1.6.0",
     "exec": "^0.2.1",
     "fs": "^0.0.1-security",
     "node-fetch": "^3.3.2",
