--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "repo-hero",
   "version": "1.0.0",
   "description": "Configurable product management analysis tool for analyzing the health of GitHub repositories and their contributors.",
-  "main": "index.js",
+  "main": "gather-and-rank.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node gather-and-rank.js",
     "combine": "node results-combiner.js",
-    "chart": "node results-charter.js",
+    "chart": "node results-charter.js; node results-team-charter.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
