--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "format": "npx prettier --write . $@",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "config": "node configurator.js $@",
     "start": "rm -rf .results_history/*.csv && rm -rf .results_history/combined_results.json && node gather-and-rank.js && node results-combiner.js && node results-charter.js && node results-team-charter.js",
     "gather": "node gather-and-rank.js",
     "combine": "rm -rf .results_history/combined_results.json && node results-combiner.js",
